samples/_failures_safe/1761788747_5be9b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f148d68f.c: In function ‘main’:
./samples/SAFE/__tmp_f148d68f.c:140:16: error: missing terminating " character
  140 |         printf("Error
      |                ^~~~~~
./samples/SAFE/__tmp_f148d68f.c:140:9: error: expected expression at end of input
  140 |         printf("Error
      |         ^~~~~~
./samples/SAFE/__tmp_f148d68f.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f148d68f.c:140:9: error: expected declaration or statement at end of input
